# SimpleTex

./: CMakeLists.txt
src/: main.cpp
